# coda

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GITHUB_ACCESS.md  README.md  SLACK_CONNECT.md  compose.yaml  example.env  example.repos.yaml  pyproject.toml  railway.json  repos.yaml  requirements.txt
app/: __init__.py  config.yaml  main.py
coda/: __init__.py  __main__.py  settings.py  slack_patches.py  team.py
coda/agents/: __init__.py  coder.py  doc_writer.py  explorer.py  planner.py  researcher.py  settings.py  triager.py
coda/tools/: __init__.py  git.py  github.py
db/: session.py
docs/: GITHUB_ACCESS.md  SLACK_CONNECT.md  SPEC.md  TEST_CASES.md
evals/: __init__.py  __main__.py  grader.py  run.py  run_evals.py  test_cases.py
evals/cases/: exploration.py  refusal.py  routing.py  security.py  slack_context.py  synthesis.py
scripts/: build_image.sh  railway_env.sh  railway_redeploy.sh  railway_up.sh
tasks/: __init__.py  daily_digest.py  proactive_agno_post.py  review_issues.py  sync_repos.py
tests/: conftest.py  test_coder_hitl.py  test_cron_hitl.py  test_explorer_hitl.py  test_git_tools_hitl.py  test_planner_hitl.py  test_proactive_agno_post.py  test_smoke.py  test_triager_hitl.py
